Update config.yml metadata and product details

--- a/produktspesifikasjon/admenheter/config.yml
+++ b/produktspesifikasjon/admenheter/config.yml
@@ -1,6 +1,7 @@
-metadataId: 041f1e6e-bdbc-4091-b48f-8a5990f3cc5b
-ogc_feature_api: https://kos-pygeoapi.atkv3-dev.kartverket.cloud/collections
+metadataId: 28c28e3a-d88f-4a34-8c60-5efe6d56a44d
 output_directory: produktspesifikasjon
-product_slug: admenheter
-updated: 2025-01-01
-xmi_url: https://sosi.geonorge.no/svn/SOSI/SOSI Del 3/Statens kartverk/AdministrativeEnheter_FylkerOgKommuner-20240101.xml
+product_slug: arealanalyse2
+updated: 2025-11-26
+xmi-model: https://sosi.geonorge.no/!/#SOSI/view/head/SOSI%20Del%203/Statens%20kartverk/NasjonaltGrunnkartForArealanalyse-20260101.xml
+xmi-username: sosi
+xmi-password: sosi
