--- a/produktspesifikasjon/admenheter/config.yml
+++ b/produktspesifikasjon/admenheter/config.yml
@@ -2,6 +2,6 @@ metadataId: 28c28e3a-d88f-4a34-8c60-5efe6d56a44d
 output_directory: produktspesifikasjon
 product_slug: arealanalyse2
 updated: 2025-11-26
-xmi_model: https://sosi.geonorge.no/!/#SOSI/view/head/SOSI%20Del%203/Statens%20kartverk/NasjonaltGrunnkartForArealanalyse-20260101.xml
+xmi_url: https://sosi.geonorge.no/!/#SOSI/view/head/SOSI%20Del%203/Statens%20kartverk/NasjonaltGrunnkartForArealanalyse-20260101.xml
 xmi_username: sosi
 xmi_password: sosi
